--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 	<title>Herro</title>
 	<h1>
-	<img src="http://www.insurgency-sandstorm.com/img/perspective/dust_2.png" height="40" width="auto"/>
+	<img src="http://images.clipartpanda.com/shooting-star-clip-art-black-and-white-RcGKnr5cL.png" height="40" width="auto"/>
 	Go Waste Your Life Somewhere Else
-	<img src="http://www.insurgency-sandstorm.com/img/perspective/dust_2.png" height="40" width="auto"/>
+	<img src="http://images.clipartpanda.com/shooting-star-clip-art-black-and-white-RcGKnr5cL.png" height="40" width="auto"/>
 	     </h1>
 		<h2/> Wow, A Shooting Star, Make a Wish</h2>
 </head>
