--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	Go Waste Your Life Somewhere Else
 	<img src="http://images.clipartpanda.com/shooting-star-clip-art-black-and-white-RcGKnr5cL.png" height="40" width="auto"/>
 	     </h1>
-		<h2/> Wow, A Shooting Star, Make a Wish</h2>
+		<h2/> Wow, A Shooting Star, I Wish For Some New Memes</h2>
 </head>
 <body>
 	<div>
