--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 	<div>
-
+	<iframe width="300" height="200" src="https://www.youtube.com/embed/Gc2u6AFImn8" frameborder="0" allowfullscreen></iframe>
+	<iframe width="300" height="200" src="https://www.youtube.com/embed/_gK16RJvMcA" frameborder="0" allowfullscreen></iframe>
 	</div>
 	<br><div class="hyperlink" /><u><a href="https://waffaholic.github.io/wow2/">    Pink Guy    </a></u><div/>
 	<div class="hyperlink" /><u><a href="https://waffaholic.github.io/wow3/">    Green Guy   </a></u></div>
